--- a/templates/blog_A.html
+++ b/templates/blog_A.html
@@ -55,10 +55,11 @@
     <div class="col-md-6 px-0">
       <h1 class="display-4">내가 풀스택을 익힌 이유</h1>
       <p class="lead mb-0"><a >Continue reading...</a></p>
-      <form>
+      <form action="/blog/set_email" method="post">
         <div class="form-row">
           <div class="col">
-            <input type="email" class="form-control" placeholder="email address">
+            <input type="email" class="form-control" name="user_email">
+            <input type="hidden" name="blog_id" value="A">
           </div>
           <div class="col">
             <button type="submit" class="btn btn-primary">구독</button>
